@@ -17,6 +17,7 @@ Bug fixes
  - [web] fixed folder export when XSRF validation is enabled (#4502)
  - [web] don't encode filename extension when exporting folders
  - [web] fixed download of HTML body parts
+ - [web] catch possible exception when registering mailto protocol
  - [core] don't always fetch the sorting columns
  - [eas] strip '<>' from bodyId and when forwarding mails
  - [eas] fix search on for Outlook application (#4605 and #4607)
